# bone_heat_test

./: CMakeLists.txt  README.md  compile.ps1  run.ps1
src/: main.cpp
